--- a/src/Leagueoflegends.Main/Leagueoflegends.Main.csproj
+++ b/src/Leagueoflegends.Main/Leagueoflegends.Main.csproj
@@ -33,6 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Themes\Generic.xaml" />
     <None Remove="Themes\Views\MainContent.xaml" />
   </ItemGroup>
 
@@ -47,6 +48,17 @@
 
   <ItemGroup>
     <Page Update="Themes\Views\MainContent.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Themes\Generic.xaml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Include="Themes\Generic.xaml">
+      <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
