--- a/src/Leagueoflegends/Leagueoflegends.csproj
+++ b/src/Leagueoflegends/Leagueoflegends.csproj
@@ -3,6 +3,7 @@
     <TargetFrameworks>net8.0-desktop</TargetFrameworks>
     <OutputType>Exe</OutputType>
     <UnoSingleProject>true</UnoSingleProject>
+    <Nullable>disable</Nullable>
 
     <!-- Display name -->
     <ApplicationTitle>Leagueoflegends</ApplicationTitle>
