--- a/src/Leagueoflegends/Leagueoflegends.csproj
+++ b/src/Leagueoflegends/Leagueoflegends.csproj
@@ -38,6 +38,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Jamesnet.Uno\Jamesnet.Uno.csproj" />
     <ProjectReference Include="..\Leagueoflegends.Main\Leagueoflegends.Main.csproj" />
+    <ProjectReference Include="..\Leagueoflegends.Social\Leagueoflegends.Social.csproj" />
   </ItemGroup>
 
 </Project>
