--- a/src/Leagueoflegends/Leagueoflegends.csproj
+++ b/src/Leagueoflegends/Leagueoflegends.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Uno.Sdk">
+﻿<Project Sdk="Uno.Sdk">
   <PropertyGroup>
     <TargetFrameworks>net8.0-desktop</TargetFrameworks>
     <OutputType>Exe</OutputType>
@@ -37,8 +37,10 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Jamesnet.Uno\Jamesnet.Uno.csproj" />
+    <ProjectReference Include="..\Leagueoflegends.Home\Leagueoflegends.Home.csproj" />
     <ProjectReference Include="..\Leagueoflegends.Main\Leagueoflegends.Main.csproj" />
     <ProjectReference Include="..\Leagueoflegends.Social\Leagueoflegends.Social.csproj" />
+    <ProjectReference Include="..\Leagueoflegends.Tft\Leagueoflegends.Tft.csproj" />
   </ItemGroup>
 
 </Project>
