--- a/src/Leagueoflegends/Leagueoflegends.csproj
+++ b/src/Leagueoflegends/Leagueoflegends.csproj
@@ -39,6 +39,7 @@
     <ProjectReference Include="..\Jamesnet.Uno\Jamesnet.Uno.csproj" />
     <ProjectReference Include="..\Leagueoflegends.Home\Leagueoflegends.Home.csproj" />
     <ProjectReference Include="..\Leagueoflegends.Main\Leagueoflegends.Main.csproj" />
+    <ProjectReference Include="..\Leagueoflegends.Navigate\Leagueoflegends.Navigate.csproj" />
     <ProjectReference Include="..\Leagueoflegends.Social\Leagueoflegends.Social.csproj" />
     <ProjectReference Include="..\Leagueoflegends.Tft\Leagueoflegends.Tft.csproj" />
   </ItemGroup>
