--- a/src/Leagueoflegends.Home/Leagueoflegends.Home.csproj
+++ b/src/Leagueoflegends.Home/Leagueoflegends.Home.csproj
@@ -43,6 +43,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Jamesnet.Uno\Jamesnet.Uno.csproj" />
+    <ProjectReference Include="..\Leagueoflegends.Support\Leagueoflegends.Support.csproj" />
   </ItemGroup>
 
   <ItemGroup>
