--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -7,4 +7,7 @@
   -->
   <ItemGroup>
   </ItemGroup>
+  <ItemGroup>
+    <PackageVersion Include="Uno.Toolkit.UI" Version="6.1.8" />
+  </ItemGroup>
 </Project>
