--- a/src/Leagueoflegends/Leagueoflegends.csproj
+++ b/src/Leagueoflegends/Leagueoflegends.csproj
@@ -37,6 +37,7 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Jamesnet.Uno\Jamesnet.Uno.csproj" />
+    <ProjectReference Include="..\Leagueoflegends.Collection\Leagueoflegends.Collection.csproj" />
     <ProjectReference Include="..\Leagueoflegends.Home\Leagueoflegends.Home.csproj" />
     <ProjectReference Include="..\Leagueoflegends.Main\Leagueoflegends.Main.csproj" />
     <ProjectReference Include="..\Leagueoflegends.Navigate\Leagueoflegends.Navigate.csproj" />
