--- a/src/Leagueoflegends.Collection/Leagueoflegends.Collection.csproj
+++ b/src/Leagueoflegends.Collection/Leagueoflegends.Collection.csproj
@@ -6,7 +6,7 @@
     <!-- Ensures the .xr.xml files are generated in a proper layout folder -->
     <GenerateLibraryLayout>true</GenerateLibraryLayout>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
 
     <!--
       UnoFeatures let's you quickly add and manage implicit package references based on the features you want to use.
@@ -35,6 +35,7 @@
   <ItemGroup>
     <None Remove="Themes\Generic.xaml" />
     <None Remove="Themes\Views\ChampionsContent.xaml" />
+    <None Remove="Themes\Views\SpellsContent.xaml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -51,6 +52,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Themes\Views\SpellsContent.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
 
   <ItemGroup>
@@ -62,5 +67,9 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Themes\Views\SpellsContent.xaml" />
   </ItemGroup>
 </Project>
